--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Pokedex</title>
+</head>
+<body>
+    <div class="container mx-auto pt-10 h-screen">
+        <div class="bg-red-600 border-gray-700 flex flex-col h-full rounded-lg shadow-lg shadow-red-500">
+            <div class="grow p-5 truncate">
+                <!-- Pokedex Content -->
+                <div id="content-wrapper" class="bg-white border border-2 border-gray-700 h-full shadow-inner shadow-black overflow-auto">
+                    <div id="content" class="p-5"></div>
+                </div>
+            </div> 
+            <div id="pagination" class="p-5 flex items-center text-white">
+                <button id="next" type="button" class="bg-gray-800 text-white rounded-r-md py-2 border-l border-gray-200 hover:bg-red-700 hover:text-white disabled:opacity-75 px-3">
+                    <div class="flex flex-row align-middle">
+                      <span class="mr-2">Next</span>
+                      <svg class="w-5 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                      </svg>
+                    </div>
+                </button>
+                <div class="ml-4">
+                    <span id="loaded-pokemons"></span> /
+                    <span id="total-pokemons"></span> Pokemons
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://unpkg.com/pokeapi-js-wrapper/dist/index.js"></script>
+    <script src="./pokedex.js"></script>
+</body>
+</html>
